<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="@+id/messagingView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MessagingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listMessages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/divider"
            android:divider="@null"
            android:dividerHeight="0dp"
            android:padding="0dip"
            android:stackFromBottom="true"
            android:transcriptMode="alwaysScroll"
            tools:listitem="@layout/message_left" />

        <RelativeLayout
            android:id="@+id/divider"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:layout_above="@+id/relSendMessage"
            android:background="@color/off_white" />

        <RelativeLayout android:id="@+id/relSendMessage"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_alignParentBottom="true">

            <RelativeLayout

                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@android:color/white"
                android:paddingLeft="10dp">


                <EditText
                    android:id="@+id/messageBodyField"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignBottom="@+id/sendButton"
                    android:layout_alignTop="@+id/sendButton"
                    android:layout_marginBottom="-4dp"
                    android:layout_marginRight="10dp"
                    android:layout_toLeftOf="@+id/sendButton"
                    android:background="@android:color/white"
                    android:hint="@string/message_elipses"
                    android:textColor="@android:color/black"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/sendButton"
                    android:layout_width="72dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_margin="4dp"
                    android:background="@drawable/button_send" />
            </RelativeLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/relSendHearbeat"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentBottom="true"
                android:background="@android:color/white">

                <Button
                    android:id="@+id/healingButton"
                    android:layout_height="match_parent"
                    android:layout_width="80dp"
                    android:text="@string/healingText"
                    android:background="#90c3d4"
                    />
                <Button
                    android:id="@+id/loveButton"
                    android:layout_height="match_parent"
                    android:layout_width="60dp"
                    android:layout_alignParentRight="true"
                    android:text="@string/loveText"
                    android:background="#DE4053"/>
                <Button
                    android:id="@+id/energyButton"
                    android:layout_height="match_parent"
                    android:layout_width="85dp"
                    android:text="@string/energyText"
                    android:background="#45DE40"/>
                <Button
                    android:id="@+id/spaceButton"
                    android:layout_height="match_parent"
                    android:layout_width="70dp"
                    android:text="@string/spaceText"
                    android:background="#ffffff"/>
                <Button
                    android:id="@+id/peaceButton"
                    android:layout_height="match_parent"
                    android:layout_width="70dp"
                    android:text="@string/peaceText"
                    android:background="#E3BF20"/>


            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

</LinearLayout>